# FracG

./: CMakeLists.txt  Imakefile  README.md  install.sh  licence.txt
.github/workflows/: build-fracg.yml
Desktop/FracG/: Imakefile  Makefile  install.sh
Desktop/FracG/MUSC/: DEM1_A1.tif  MuFaults_clip.sbn  MuFaults_clip.sbx  MuFaults_clip.shp  MuFaults_clip.shx
Desktop/FracG/TEST10/: 10faults.dbf  10faults.prj  10faults.shp
Desktop/FracG/TEST500/: 500faults.dbf  500faults.shp  DEM.tif
Desktop/FracG/src/: GeoRef.cpp  GeoRef.h  geometrie.cpp  geometrie.h  graph.h  main.cpp  stats.h
MANUAL/: manual.tex  manual_bib.bib
MUSC/: MuFaults_clip.dbf
TEST10/: 10faults.shx
TEST500/: 500faults.shx
doc/: FracG_analyses.md  FracG_options.md  FracG_outputs.md
include/: FracG.h  GeoRef.h  fracg.h  geometrie.h  graph.h  model.h  stats.h  util.h
manuscript/: FracG-refs.bib  FracG.abs  FracG.aux  FracG.bbl  FracG.blg  FracG.tex
src/: GeoRef.cpp  GeoRef.h  geometrie.cpp  geometrie.h  graph.cpp  graph.h  main.cpp  main.h  model.cpp  model.h  stats.cpp  stats.h  util.cpp
test/: dem.tif
test/1branch/: 1branch.sbn  1branch.sbx  1branch.shp  1branch.shx  Branches.dbf  Branches.shp  Branches.shx  Fault_Statistics.csv  Graph_Statistics.csv  Vertices.dbf  Vertices.shp  Vertices.shx  model_cdf_exponential.txt  model_cdf_exponential_all.txt  model_cdf_log_normal.txt  model_cdf_log_normal_all.txt  model_cdf_power_law.txt  model_cdf_power_law_all.txt
test/1intersec/: 1intersec.dbf  1intersec.sbn  1intersec.sbx  1intersec.shp  1intersec.shx  Branches.dbf  Branches.shp  Branches.shx  Fault_Statistics.csv  Vertices.shp  Vertices.shx  model_cdf_exponential.txt  model_cdf_exponential_all.txt  model_cdf_log_normal.txt  model_cdf_log_normal_all.txt  model_cdf_power_law.txt  model_cdf_power_law_all.txt  text_a.tif  text_b.tif
test/1line/: 1line.sbn  1line.sbx  1line.shp  1line.shx  Fault_Statistics.csv  text_a.tif  text_b.tif
test/2line_a/: 2line_a.sbn  2line_a.sbx  2line_a.shp  2line_a.shx  Branches.dbf  Branches.shp  Branches.shx  Fault_Statistics.csv  Graph_Statistics.csv  Vertices.shp  Vertices.shx  model_cdf_exponential.txt  model_cdf_exponential_all.txt  model_cdf_log_normal.txt  model_cdf_log_normal_all.txt  model_cdf_power_law.txt  model_cdf_power_law_all.txt
test/2line_b/: 2line_b.sbn  2line_b.sbx  2line_b.shp  2line_b.shx
test/3line/: 3line.dbf  3line.sbn  3line.sbx  3line.shp  3line.shx  Fault_Statistics.csv  text_a.tif  text_b.tif
test/network/: Branches.dbf  Branches.shp  Branches.shx  C_dist.tif  Fault_Statistics.csv  Graph_Statistics.csv  P20.tif  Vertices.dbf  Vertices.shp  model_cdf_exponential.txt  model_cdf_exponential_all.txt  model_cdf_log_normal.txt  model_cdf_log_normal_all.txt  model_cdf_power_law.txt  model_cdf_power_law_all.txt  network.dbf  network.sbn  network.sbx  network.shp  network.shx
test/network/fracg_output_network/graph/: graph_statistics.csv
test/network/fracg_output_network/mesh/: 2D_mesh.msh  2D_mesh_SideSet_names.txt  2D_mesh_SideSet_names_interface.txt  2D_mesh_SideSet_names_lowD.txt  2D_mesh_SideSet_names_propertiestxt
(+10 files in other folders)
